clusters/my-cluster/infrastucture/headlamp/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: headlamp-lb
  namespace: kube-system
spec:
  ports:
    - port: 80
      targetPort: 4466
  selector:
    app.kubernetes.io/name: headlamp
  type: LoadBalancer
